CSS - fix - fixed basic layout problems for safari browser

--- a/server/public/CSS/specifics.css
+++ b/server/public/CSS/specifics.css
@@ -172,7 +172,7 @@
         gap: 15px;
         min-height: min-content;
         max-height: unset;
-        height: min-content;
+        height: auto;
 
         >.widget {
             height: 100%;
